--- a/config.json
+++ b/config.json
@@ -31,6 +31,15 @@
       "action": "add",
       "args": {
         "name": "cn",
+        "uri": "https://raw.githubusercontent.com/mayaxcn/china-ip-list/master/chnroute.txt",
+        "onlyIPType": "ipv4"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
+        "name": "cn",
         "uri": "https://raw.githubusercontent.com/gaoyifan/china-operator-ip/ip-lists/china.txt",
         "onlyIPType": "ipv4"
       }
