--- a/config.json
+++ b/config.json
@@ -118,7 +118,8 @@
           "google",
           "netflix",
           "telegram",
-          "twitter"
+          "twitter",
+          "cloud-cn"
         ]
       }
     },
@@ -145,7 +146,8 @@
           "google",
           "netflix",
           "telegram",
-          "twitter"
+          "twitter",
+          "cloud-cn"
         ]
       }
     },
@@ -170,7 +172,8 @@
           "google",
           "netflix",
           "telegram",
-          "twitter"
+          "twitter",
+          "cloud-cn"
         ]
       }
     },
