--- a/config-example.json
+++ b/config-example.json
@@ -93,6 +93,15 @@
       "action": "add",
       "args": {
         "name": "cn",
+        "uri": "https://raw.githubusercontent.com/mayaxcn/china-ip-list/master/chnroute.txt",
+        "onlyIPType": "ipv4"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
+        "name": "cn",
         "uri": "https://raw.githubusercontent.com/17mon/china_ip_list/master/china_ip_list.txt",
         "onlyIPType": "ipv4"
       }
