--- a/config-example.json
+++ b/config-example.json
@@ -10,20 +10,11 @@
       }
     },
     {
-      "type": "v2rayGeoIPDat",
-      "action": "add",
-      "args": {
-        "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/geoip.dat",
-        "onlyIPType": "ipv6"
-      }
-    },
-    {
       "type": "maxmindGeoLite2CountryCSV",
       "action": "add",
       "args": {
         "country": "./geolite2/GeoLite2-Country-Locations-en.csv",
         "ipv4": "./geolite2/GeoLite2-Country-Blocks-IPv4.csv",
-        "ipv6": "./geolite2/GeoLite2-Country-Blocks-IPv6.csv",
         "wantedList": ["cn", "us"]
       }
     },
@@ -44,14 +35,14 @@
       "type": "maxmindMMDB",
       "action": "add",
       "args": {
-        "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb"
+        "uri": "https://github.com/wukecheng/geoip/raw/release/Country.mmdb"
       }
     },
     {
       "type": "maxmindMMDB",
       "action": "remove",
       "args": {
-        "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb",
+        "uri": "https://github.com/wukecheng/geoip/raw/release/Country.mmdb",
         "wantedList": ["jp"],
         "onlyIPType": "ipv6"
       }
