--- a/config-example.json
+++ b/config-example.json
@@ -15,6 +15,7 @@
       "args": {
         "country": "./geolite2/GeoLite2-Country-Locations-en.csv",
         "ipv4": "./geolite2/GeoLite2-Country-Blocks-IPv4.csv",
+        "onlyIPType": "ipv4", 
         "wantedList": ["cn", "us"]
       }
     },
@@ -35,6 +36,7 @@
       "type": "maxmindMMDB",
       "action": "add",
       "args": {
+        "onlyIPType": "ipv4", 
         "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb"
       }
     },
@@ -74,9 +76,9 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "mylist",
-        "uri": "./an/example/dir/mycidr.txt",
-        "onlyIPType": "ipv6"
+        "name": "cn",
+        "uri": "https://raw.githubusercontent.com/17mon/china_ip_list/master/china_ip_list.txt",
+        "onlyIPType": "ipv4"
       }
     },
     {
@@ -84,7 +86,16 @@
       "action": "add",
       "args": {
         "name": "cn",
-        "uri": "https://raw.githubusercontent.com/17mon/china_ip_list/master/china_ip_list.txt",
+        "uri": "https://raw.githubusercontent.com/mayaxcn/china-ip-list/master/chnroute.txt",
+        "onlyIPType": "ipv4"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
+        "name": "cn",
+        "uri": "https://raw.githubusercontent.com/gaoyifan/china-operator-ip/ip-lists/china.txt",
         "onlyIPType": "ipv4"
       }
     },
@@ -102,6 +113,7 @@
       "type": "v2rayGeoIPDat",
       "action": "output",
       "args": {
+        "onlyIPType": "ipv4", 
         "outputName": "geoip.dat",
         "outputDir": "./publish"
       }
@@ -110,6 +122,7 @@
       "type": "v2rayGeoIPDat",
       "action": "output",
       "args": {
+        "onlyIPType": "ipv4", 
         "outputName": "geoip-only-cn-private.dat",
         "outputDir": "./publish",
         "wantedList": ["cn", "private"]
@@ -119,6 +132,7 @@
       "type": "v2rayGeoIPDat",
       "action": "output",
       "args": {
+        "onlyIPType": "ipv4", 
         "outputDir": "./publish",
         "oneFilePerList": true,
         "wantedList": ["cn", "private", "test"],
@@ -133,6 +147,7 @@
       "type": "maxmindMMDB",
       "action": "output",
       "args": {
+        "onlyIPType": "ipv4", 
         "outputName": "Country.mmdb",
         "overwriteList": ["cn", "private"]
       }
@@ -141,6 +156,7 @@
       "type": "maxmindMMDB",
       "action": "output",
       "args": {
+        "onlyIPType": "ipv4", 
         "outputName": "country-only-cn-private.mmdb",
         "wantedList": ["cn", "private"]
       }
@@ -156,28 +172,11 @@
       }
     },
     {
-      "type": "text",
-      "action": "output",
-      "args": {
-        "outputDir": "./publish",
-        "wantedList": ["cn", "us", "private"],
-        "onlyIPType": "ipv6"
-      }
-    },
-    {
       "type": "clashRuleSetClassical",
       "action": "output",
       "args": {
         "wantedList": ["cn", "private", "test"],
         "onlyIPType": "ipv4"
-      }
-    },
-    {
-      "type": "clashRuleSet",
-      "action": "output",
-      "args": {
-        "wantedList": ["cn", "private", "test"],
-        "onlyIPType": "ipv6"
       }
     },
     {
