--- a/config-example.json
+++ b/config-example.json
@@ -10,12 +10,20 @@
       }
     },
     {
+      "type": "v2rayGeoIPDat",
+      "action": "add",
+      "args": {
+        "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/geoip.dat",
+        "onlyIPType": "ipv6"
+      }
+    },
+    {
       "type": "maxmindGeoLite2CountryCSV",
       "action": "add",
       "args": {
         "country": "./geolite2/GeoLite2-Country-Locations-en.csv",
         "ipv4": "./geolite2/GeoLite2-Country-Blocks-IPv4.csv",
-        "onlyIPType": "ipv4", 
+        "ipv6": "./geolite2/GeoLite2-Country-Blocks-IPv6.csv",
         "wantedList": ["cn", "us"]
       }
     },
@@ -36,15 +44,14 @@
       "type": "maxmindMMDB",
       "action": "add",
       "args": {
-        "onlyIPType": "ipv4", 
-        "uri": "https://raw.githubusercontent.com/wukecheng/geoip/release/Country.mmdb"
+        "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb"
       }
     },
     {
       "type": "maxmindMMDB",
       "action": "remove",
       "args": {
-        "uri": "https://raw.githubusercontent.com/wukecheng/geoip/release/Country.mmdb",
+        "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb",
         "wantedList": ["jp"],
         "onlyIPType": "ipv6"
       }
@@ -76,26 +83,17 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "mylist",
+        "uri": "./an/example/dir/mycidr.txt",
+        "onlyIPType": "ipv6"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "cn",
         "uri": "https://raw.githubusercontent.com/17mon/china_ip_list/master/china_ip_list.txt",
-        "onlyIPType": "ipv4"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
-        "name": "cn",
-        "uri": "https://raw.githubusercontent.com/mayaxcn/china-ip-list/master/chnroute.txt",
-        "onlyIPType": "ipv4"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
-        "name": "cn",
-        "uri": "https://raw.githubusercontent.com/gaoyifan/china-operator-ip/ip-lists/china.txt",
         "onlyIPType": "ipv4"
       }
     },
@@ -113,7 +111,6 @@
       "type": "v2rayGeoIPDat",
       "action": "output",
       "args": {
-        "onlyIPType": "ipv4", 
         "outputName": "geoip.dat",
         "outputDir": "./publish"
       }
@@ -122,7 +119,6 @@
       "type": "v2rayGeoIPDat",
       "action": "output",
       "args": {
-        "onlyIPType": "ipv4", 
         "outputName": "geoip-only-cn-private.dat",
         "outputDir": "./publish",
         "wantedList": ["cn", "private"]
@@ -132,7 +128,6 @@
       "type": "v2rayGeoIPDat",
       "action": "output",
       "args": {
-        "onlyIPType": "ipv4", 
         "outputDir": "./publish",
         "oneFilePerList": true,
         "wantedList": ["cn", "private", "test"],
@@ -147,7 +142,6 @@
       "type": "maxmindMMDB",
       "action": "output",
       "args": {
-        "onlyIPType": "ipv4", 
         "outputName": "Country.mmdb",
         "overwriteList": ["cn", "private"]
       }
@@ -156,7 +150,6 @@
       "type": "maxmindMMDB",
       "action": "output",
       "args": {
-        "onlyIPType": "ipv4", 
         "outputName": "country-only-cn-private.mmdb",
         "wantedList": ["cn", "private"]
       }
@@ -172,11 +165,28 @@
       }
     },
     {
+      "type": "text",
+      "action": "output",
+      "args": {
+        "outputDir": "./publish",
+        "wantedList": ["cn", "us", "private"],
+        "onlyIPType": "ipv6"
+      }
+    },
+    {
       "type": "clashRuleSetClassical",
       "action": "output",
       "args": {
         "wantedList": ["cn", "private", "test"],
         "onlyIPType": "ipv4"
+      }
+    },
+    {
+      "type": "clashRuleSet",
+      "action": "output",
+      "args": {
+        "wantedList": ["cn", "private", "test"],
+        "onlyIPType": "ipv6"
       }
     },
     {
