--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
       "action": "add",
       "args": {
         "country": "./geolite2/GeoLite2-Country-Locations-en.csv",
-        "ipv4": "./geolite2/GeoLite2-Country-Blocks-IPv4.csv"
+        "ipv4": "./geolite2/GeoLite2-Country-Blocks-IPv4.csv",
+        "onlyIPType": "ipv4"
       }
     },
     {
@@ -48,7 +49,8 @@
       "action": "add",
       "args": {
         "name": "cloudflare",
-        "uri": "https://www.cloudflare.com/ips-v4"
+        "uri": "https://www.cloudflare.com/ips-v4",
+        "onlyIPType": "ipv4"
       }
     },
     {
@@ -56,14 +58,16 @@
       "action": "add",
       "args": {
         "name": "telegram",
-        "uri": "https://core.telegram.org/resources/cidr.txt"
+        "uri": "https://core.telegram.org/resources/cidr.txt",
+        "onlyIPType": "ipv4"
       }
     },
     {
       "type": "text",
       "action": "add",
       "args": {
-        "inputDir": "./data"
+        "inputDir": "./data",
+        "onlyIPType": "ipv4"
       }
     },
     {
@@ -81,16 +85,9 @@
       }
     },
     {
-      "type": "v2rayGeoIPDat",
-      "action": "output",
-      "args": {
-        "oneFilePerList": true,
-        "wantedList": ["cn", "private"]
-      }
-    },
-    {
       "type": "text",
-      "action": "output"
+      "action": "output",
+      "onlyIPType": "ipv4"
     }
   ]
 }
